# java_with_bazel

./: .gitignore  WORKSPACE  java_with_bazel_deps.bzl
hello-world-app/: BUILD.bazel  Binary.java  Library.java
spring-boot-app/: Application.java  BUILD.bazel  HelloWorldController.java
