load("@io_bazel_rules_docker//java:image.bzl", "java_image")
load("@io_bazel_rules_docker//lang:image.bzl", container_image = "app_layer")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Application.java",
])

exports_files([
    "HelloWorldController.java",
])

java_library(
    name = "java_image_library",
    srcs = ["HelloWorldController.java"],
    deps = [
        '@maven//:org_springframework_boot_spring_boot',
        '@maven//:org_springframework_boot_spring_boot_autoconfigure',
        '@maven//:org_springframework_spring_web',
        '@maven//:org_springframework_boot_spring_boot_starter_web',
    ],
)

java_image(
    name = "java_docker_image",
    srcs = ["Application.java"],
    layers = [
        ":java_image_library",
    ],
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_spring_web",
    ],
    main_class = "spring_boot_app.Application",
)